--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -34,9 +34,7 @@ jobs:
             NEW_VERSION=`git show -s --format=%B HEAD | head -n 1 | awk -e '{ print $2 }'`
           else
             echo "Detected prerelease..."
-            PREVIOUS_VERSION=`git describe --tags --abbrev=0`
-            echo "PREVIOUS_VERSION: ${PREVIOUS_VERSION}"
-            NEW_VERSION=`./node_modules/.bin/semver $PREVIOUS_VERSION --increment prerelease --preid beta`
+            NEW_VERSION=`./bin/gotagger`
           fi
 
           echo "NEW_VERSION=$NEW_VERSION" >> $GITHUB_OUTPUT
