chore(prerelease): wip

--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -63,5 +63,5 @@ jobs:
         env:
           NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
         run: |
-          npm publish ./build
+          # npm publish ./build
 
