--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -56,8 +56,8 @@ jobs:
         env:
           NEW_VERSION: ${{ steps.determine_next_version.outputs.NEW_VERSION }}
         run: |
-          git tag $NEW_VERSION
-          git push origin $NEW_VERSION
+          # git tag $NEW_VERSION
+          # git push origin $NEW_VERSION
 
       - name: Publish
         env:
