--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -35,9 +35,10 @@ jobs:
             NEW_VERSION=`git show -s --format=%B HEAD | head -n 1 | awk -e '{ print $2 }'`
           else
             echo "Detected prerelease"
-            GOTAGGER_RESULT=`./bin/gotagger`
-            echo "GOTAGGER_RESULT: ${GOTAGGER_RESULT}"
-            NEW_VERSION=`./node_modules/.bin/semver $GOTAGGER_RESULT --increment prerelease --preid beta`
+            # GOTAGGER_RESULT=`./bin/gotagger`
+            # echo "GOTAGGER_RESULT: ${GOTAGGER_RESULT}"
+            # NEW_VERSION=`./node_modules/.bin/semver $GOTAGGER_RESULT --increment prerelease --preid beta`
+            NEW_VERSION=`node ./bin/prerelease.js`
           fi
 
           echo "NEW_VERSION=$NEW_VERSION" >> $GITHUB_OUTPUT
