--- a/.github/workflows/prepare.yml
+++ b/.github/workflows/prepare.yml
@@ -34,9 +34,7 @@ jobs:
       - name: Determine next version
         id: determine_next_version
         run: |
-          git commit --allow-empty -m 'release: '
-          NEW_VERSION=`./bin/gotagger`
-          git reset HEAD~
+          NEW_VERSION=`./bin/gotagger | sed 's/-[^-]*$//'`
           echo "NEW_VERSION=$NEW_VERSION" >> $GITHUB_OUTPUT
           cat $GITHUB_OUTPUT
 
