--- a/.github/workflows/prepare.yml
+++ b/.github/workflows/prepare.yml
@@ -48,15 +48,13 @@ jobs:
         env:
           NEW_VERSION: ${{ steps.determine_next_version.outputs.NEW_VERSION }}
         run: |
-          COMMIT_MESSAGE=`release: ${NEW_VERSION}`
+          COMMIT_MESSAGE="release: ${NEW_VERSION}"
           echo "COMMIT_MESSAGE=$COMMIT_MESSAGE" >> $GITHUB_OUTPUT
           cat $GITHUB_OUTPUT
 
       - name: PR
         uses: peter-evans/create-pull-request@v5
         with:
-          commit-message: >-
-            release: ${{ steps.commit_message.outputs.COMMIT_MESSAGE }}
-          title: >-
-            release: ${{ steps.commit_message.outputs.COMMIT_MESSAGE }}
+          commit-message: ${{ steps.commit_message.outputs.COMMIT_MESSAGE }}
+          title: ${{ steps.commit_message.outputs.COMMIT_MESSAGE }}
 
