--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -62,9 +62,15 @@ jobs:
           git tag $NEW_VERSION
           git push origin $NEW_VERSION
 
-      - name: Publish
+      - name: Publish release
         env:
           NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
-        run: |
-          npm publish ./build
+        if: ${{ steps.determine_type_of_release.outputs.RELEASE_TYPE == 'release' }}
+        run: npm publish ./build --tag=latest
+
+      - name: Publish prerelease
+        env:
+          NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
+        if: ${{ steps.determine_type_of_release.outputs.RELEASE_TYPE == 'prerelease' }}
+        run: npm publish ./build --tag=beta
 
