--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -3,6 +3,7 @@ on:
   push:
     branches:
       - 'main'
+      - '[0-9+.x]'
 jobs:
   Tag_And_Publish:
     runs-on: ubuntu-latest
@@ -34,6 +35,10 @@ jobs:
             RELEASE_TYPE="prerelease"
           fi
 
+          if [[ `git rev-parse --abbrev-ref HEAD` =~ ^[0-9]+[.][0-9]+[.]x$ ]]; then
+            RELEASE_TYPE="maintenance"
+          fi
+
           echo "RELEASE_TYPE=$RELEASE_TYPE" >> $GITHUB_OUTPUT
           cat $GITHUB_OUTPUT
 
@@ -55,13 +60,13 @@ jobs:
           head package.json
           cd ..
 
-      - name: Tag
-        env:
-          NEW_VERSION: ${{ steps.determine_next_version.outputs.NEW_VERSION }}
-        run: |
-          git tag $NEW_VERSION
-          git push origin $NEW_VERSION
-
+      # - name: Tag
+      #   env:
+      #     NEW_VERSION: ${{ steps.determine_next_version.outputs.NEW_VERSION }}
+      #   run: |
+      #     git tag $NEW_VERSION
+      #     git push origin $NEW_VERSION
+      #
       # - name: Publish release
       #   env:
       #     NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
@@ -73,11 +78,3 @@ jobs:
       #     NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
       #   if: ${{ steps.determine_type_of_release.outputs.RELEASE_TYPE == 'prerelease' }}
       #   run: npm publish ./build --tag=beta
-
-on:
-  push:
-    branches:
-      - 'foo'
-    steps:
-      - name: Echo
-        run: echo "hello, foo"
