--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -3,7 +3,7 @@ on:
   push:
     branches:
       - 'main'
-      - '[0-9]+.[0-9]+.[0-9]+.'
+      - '[0-9]+.[0-9]+.[0-9]+'
 jobs:
   Tag_And_Publish:
     runs-on: ubuntu-latest
@@ -61,12 +61,10 @@ jobs:
           head package.json
           cd ..
 
-      - name: Tag
+      - name: Create release tag
         env:
           NEW_VERSION: ${{ steps.determine_next_version.outputs.NEW_VERSION }}
-        run: |
-          git tag $NEW_VERSION
-          git push origin $NEW_VERSION
+        run: git tag $NEW_VERSION
 
       - name: Publish release
         env:
@@ -86,3 +84,7 @@ jobs:
         if: ${{ steps.determine_type_of_release.outputs.RELEASE_TYPE == 'maintenance' }}
         run: npm publish ./build
 
+      - name: Push release tag
+        env:
+          NEW_VERSION: ${{ steps.determine_next_version.outputs.NEW_VERSION }}
+        run: git push origin $NEW_VERSION
