--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -48,7 +48,7 @@ jobs:
       - name: Update build/package.json
         env:
           NEW_VERSION: ${{ steps.determine_next_version.outputs.NEW_VERSION }}
-        if: ${{ steps.determine_next_version.outputs.NEW_VERSION != 'null' }}
+        if: ${{ steps.determine_next_version.outputs.NEW_VERSION != "null" }}
         run: |
           cd build
           npm version $NEW_VERSION --commit-hooks false --git-tag-version false
@@ -58,14 +58,14 @@ jobs:
       - name: Create release tag
         env:
           NEW_VERSION: ${{ steps.determine_next_version.outputs.NEW_VERSION }}
-        if: ${{ steps.determine_next_version.outputs.NEW_VERSION != 'null' }}
+        if: ${{ steps.determine_next_version.outputs.NEW_VERSION != "null" }}
         run: git tag $NEW_VERSION
 
       - name: Publish release
         env:
           NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
         if: |
-          ${{ steps.determine_next_version.outputs.NEW_VERSION != 'null' }} &&
+          ${{ steps.determine_next_version.outputs.NEW_VERSION != "null" }} &&
           ${{ steps.determine_type_of_release.outputs.RELEASE_TYPE == 'release' }}
         run: npm publish ./build --tag=latest
 
@@ -73,7 +73,7 @@ jobs:
         env:
           NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
         if: |
-          ${{ steps.determine_next_version.outputs.NEW_VERSION != 'null' }} &&
+          ${{ steps.determine_next_version.outputs.NEW_VERSION != "null" }} &&
           ${{ steps.determine_type_of_release.outputs.RELEASE_TYPE == 'prerelease' }}
         run: npm publish ./build --tag=beta
 
@@ -81,12 +81,12 @@ jobs:
         env:
           NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
         if: |
-          ${{ steps.determine_next_version.outputs.NEW_VERSION != 'null' }} &&
+          ${{ steps.determine_next_version.outputs.NEW_VERSION != "null" }} &&
           ${{ steps.determine_type_of_release.outputs.RELEASE_TYPE == 'maintenance' }}
         run: npm publish ./build --tag=maintenance
 
       - name: Push release tag
         env:
           NEW_VERSION: ${{ steps.determine_next_version.outputs.NEW_VERSION }}
-        if: ${{ steps.determine_next_version.outputs.NEW_VERSION != 'null' }}
+        if: ${{ steps.determine_next_version.outputs.NEW_VERSION != "null" }}
         run: git push origin $NEW_VERSION
