--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -66,7 +66,7 @@ jobs:
           NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
         if: |
           ${{ steps.determine_next_version.outputs.NEW_VERSION != "null" }} &&
-          ${{ steps.determine_type_of_release.outputs.RELEASE_TYPE == 'release' }}
+          ${{ steps.determine_type_of_release.outputs.RELEASE_TYPE == "release" }}
         run: npm publish ./build --tag=latest
 
       - name: Publish prerelease
@@ -74,7 +74,7 @@ jobs:
           NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
         if: |
           ${{ steps.determine_next_version.outputs.NEW_VERSION != "null" }} &&
-          ${{ steps.determine_type_of_release.outputs.RELEASE_TYPE == 'prerelease' }}
+          ${{ steps.determine_type_of_release.outputs.RELEASE_TYPE == "prerelease" }}
         run: npm publish ./build --tag=beta
 
       - name: Publish maintenance release
@@ -82,7 +82,7 @@ jobs:
           NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
         if: |
           ${{ steps.determine_next_version.outputs.NEW_VERSION != "null" }} &&
-          ${{ steps.determine_type_of_release.outputs.RELEASE_TYPE == 'maintenance' }}
+          ${{ steps.determine_type_of_release.outputs.RELEASE_TYPE == "maintenance" }}
         run: npm publish ./build --tag=maintenance
 
       - name: Push release tag
