--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -64,25 +64,19 @@ jobs:
       - name: Publish release
         env:
           NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
-        if: |
-          ${{ steps.determine_next_version.outputs.NEW_VERSION != 'null' }} &&
-          ${{ steps.determine_type_of_release.outputs.RELEASE_TYPE == 'release' }}
+        if: ${{ (steps.determine_next_version.outputs.NEW_VERSION != 'null') && (steps.determine_type_of_release.outputs.RELEASE_TYPE == 'release') }}
         run: npm publish ./build --tag=latest
 
       - name: Publish prerelease
         env:
           NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
-        if: |
-          ${{ steps.determine_next_version.outputs.NEW_VERSION != 'null' }} &&
-          ${{ steps.determine_type_of_release.outputs.RELEASE_TYPE == 'prerelease' }}
+        if: ${{ (steps.determine_next_version.outputs.NEW_VERSION != 'null') && (steps.determine_type_of_release.outputs.RELEASE_TYPE == 'prerelease') }}
         run: npm publish ./build --tag=beta
 
       - name: Publish maintenance release
         env:
           NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
-        if: |
-          ${{ steps.determine_next_version.outputs.NEW_VERSION != 'null' }} &&
-          ${{ steps.determine_type_of_release.outputs.RELEASE_TYPE == 'maintenance' }}
+        if: ${{ (steps.determine_next_version.outputs.NEW_VERSION != 'null') && (steps.determine_type_of_release.outputs.RELEASE_TYPE == 'maintenance') }}
         run: npm publish ./build --tag=maintenance
 
       - name: Push release tag
