--- a/package.json
+++ b/package.json
@@ -23,7 +23,9 @@
     "goatlang": "index.js"
   },
   "devDependencies": {
+    "commander": "^11.1.0",
     "conventional-changelog": "5.1.0",
-    "prettier": "^2.8.4"
+    "prettier": "^2.8.4",
+    "tape": "^5.7.2"
   }
 }
