--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -29,18 +29,36 @@ jobs:
       - name: Version info
         run: node ./bin/version.js --pretty
 
-      - name: Determine type of release
-        id: determine_type_of_release
-        run: |
-          RELEASE_TYPE=`node ./bin/version.js --value="releaseType"`
-          echo "RELEASE_TYPE=$RELEASE_TYPE" >> $GITHUB_OUTPUT
-          cat $GITHUB_OUTPUT
-
       - name: Determine next version
         id: determine_next_version
         run: |
           NEW_VERSION=`node ./bin/version.js --value="nextVersion"`
           echo "NEW_VERSION=$NEW_VERSION" >> $GITHUB_OUTPUT
+          cat $GITHUB_OUTPUT
+
+      - name: Determine type of release
+        id: determine_type_of_release
+        if: ${{ (steps.determine_next_version.outputs.NEW_VERSION != 'null') }}
+        run: |
+          RELEASE_TYPE=`node ./bin/version.js --value="releaseType"`
+          echo "RELEASE_TYPE=$RELEASE_TYPE" >> $GITHUB_OUTPUT
+          cat $GITHUB_OUTPUT
+
+      - name: Determine publishing dist tag
+        id: determine_dist_tag
+        env:
+          RELEASE_TYPE: ${{ steps.determine_next_version.outputs.RELEASE_TYPE }}
+        if: ${{ (steps.determine_next_version.outputs.NEW_VERSION != 'null') }}
+        run: |
+          DIST_TAG=latest
+          if [[ "$RELEASE_TYPE" == "release" ]]; then
+            DIST_TAG=latest
+          elsif [[ "$RELEASE_TYPE" == "prerelease" ]]; then
+            DIST_TAG=beta
+          else [[ "$RELEASE_TYPE" == "maintenance" ]]; then
+            DIST_TAG=maintenance
+          fi
+          echo "DIST_TAG=$DIST_TAG" >> $GITHUB_OUTPUT
           cat $GITHUB_OUTPUT
 
       - name: Update build/package.json
@@ -59,23 +77,12 @@ jobs:
         if: ${{ steps.determine_next_version.outputs.NEW_VERSION != 'null' }}
         run: git tag $NEW_VERSION
 
-      - name: Publish release
+      - name: Publish
         env:
           NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
-        if: ${{ (steps.determine_next_version.outputs.NEW_VERSION != 'null') && (steps.determine_type_of_release.outputs.RELEASE_TYPE == 'release') }}
-        run: npm publish ./build --tag=latest
-
-      - name: Publish prerelease
-        env:
-          NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
-        if: ${{ (steps.determine_next_version.outputs.NEW_VERSION != 'null') && (steps.determine_type_of_release.outputs.RELEASE_TYPE == 'prerelease') }}
-        run: npm publish ./build --tag=beta
-
-      - name: Publish maintenance release
-        env:
-          NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
-        if: ${{ (steps.determine_next_version.outputs.NEW_VERSION != 'null') && (steps.determine_type_of_release.outputs.RELEASE_TYPE == 'maintenance') }}
-        run: npm publish ./build --tag=maintenance
+          DIST_TAG: ${{ steps.determine_next_version.outputs.DIST_TAG }}
+        if: ${{ (steps.determine_next_version.outputs.NEW_VERSION != 'null') }}
+        run: npm publish ./build --tag=$DIST_TAG
 
       - name: Push release tag
         env:
