--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "format:check": "prettier --check \"**/*.{js,md}\"",
     "build": "cp index.js build",
     "gotagger": "./bin/gotagger",
-    "changelog": "node ./bin/changelog.js"
+    "changelog": "touch ./CHANGELOG.md && rm ./CHANGELOG.md && node ./bin/changelog.js"
   },
   "license": "MIT",
   "bin": {
